feat(auth): add OAuth2 login

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,6 +21,9 @@ services:
       - DB_NAME=vhu_bmwa
       - JWT_SECRET=your_jwt_secret_key
       - BACKEND_PORT=8080
+      - GOOGLE_CLIENT_ID=xxxxx
+      - GOOGLE_CLIENT_SECRET=xxxxxxx
+      - GOOGLE_REDIRECT_URL=http://localhost/api/oauth2/callback
     networks:
       - app-network
     depends_on:
