refactor: api endpoint (v1, v2)

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,21 +8,31 @@ services:
       - "443:443"
     depends_on:
       - backend
+      - frontend
     networks:
       - app-network
+  frontend:
+    build: ./frontend
+    ports:
+      - "5173:5173"
+    networks:
+      - app-network
+    depends_on:
+      - backend
 
   backend:
     build: ./backend
     environment:
+      - FRONTEND_URL=http://localhost:5173
       - DB_USER=root
       - DB_PASSWORD=password
       - DB_HOST=mysql
       - DB_PORT=3306
       - DB_NAME=vhu_bmwa
-      - JWT_SECRET=your_jwt_secret_key
+      - JWT_SECRET=your_jwt_secret_key 
       - BACKEND_PORT=8080
-      - GOOGLE_CLIENT_ID=xxxxx
-      - GOOGLE_CLIENT_SECRET=xxxxxxx
+      - GOOGLE_CLIENT_ID=xxx
+      - GOOGLE_CLIENT_SECRET=xx
       - GOOGLE_REDIRECT_URL=http://localhost/api/oauth2/callback
     networks:
       - app-network
