--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,11 @@
 *.log
+node_modules
+.vscode
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+.env.production
