--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,14 @@ http {
     add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
+    # CORS configuration
+    map $http_origin $cors_origin {
+        default "";
+        "http://localhost:5173" "$http_origin";
+        "http://192.168.2.13:5173" "$http_origin";
+        "~^http://192\.168\.2\.\d+:5173$" "$http_origin";  # Allow any device in 192.168.2.x subnet
+    }
+
     sendfile        on;
     tcp_nopush      on;
     tcp_nodelay     on;
@@ -83,6 +91,25 @@ http {
             add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
             add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
 
+            # CORS headers
+            add_header 'Access-Control-Allow-Origin' $cors_origin always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, Cookie' always;
+            add_header 'Access-Control-Allow-Credentials' 'true' always;
+            add_header 'Access-Control-Expose-Headers' 'Content-Length' always;
+
+            # Handle preflight requests
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' $cors_origin;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
+                add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization, Cookie, X-Role, X-User';
+                add_header 'Access-Control-Allow-Credentials' 'true';
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+
             proxy_pass http://backend:8080/api/;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
@@ -97,23 +124,6 @@ http {
             proxy_read_timeout 120;
             proxy_connect_timeout 120;
             proxy_send_timeout 120;
-
-            # CORS headers
-            add_header 'Access-Control-Allow-Origin' 'http://localhost' always;
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
-            add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization' always;
-            add_header 'Access-Control-Expose-Headers' 'Content-Length' always;
-
-            # Handle preflight requests
-            if ($request_method = 'OPTIONS') {
-                add_header 'Access-Control-Allow-Origin' 'http://localhost';
-                add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS';
-                add_header 'Access-Control-Allow-Headers' 'Origin, Content-Type, Accept, Authorization';
-                add_header 'Access-Control-Max-Age' 1728000;
-                add_header 'Content-Type' 'text/plain; charset=utf-8';
-                add_header 'Content-Length' 0;
-                return 204;
-            }
         }
     }
 } 
